Fix gap between stacked featured articles

--- a/style/lbb.css
+++ b/style/lbb.css
@@ -276,6 +276,11 @@ a:focus {
     box-shadow: 0 0 4px -2px rgba(0,0,0,0.2);
 }
 
+.sam-featured {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .widget {
     color: #5b5c5c;
     margin-bottom: 20px;
